# AuroraDev

./: .gitmodules  CMakeLists.txt  PreLoad.cmake
artifacts/last_build_version/: Test_PowerUp
cmake/: testing_targets.cmake
tests/: CMakeLists.txt  aurora_test_harness.cmake  headers.hpp  shared_main.cpp
tests/container/: CMakeLists.txt  circular_buffer_tests.cpp  fixture_circular_buffer.hpp  fixture_mpmc_queue.hpp  stream_buffer_tests.cpp  test_circular_buffer.cpp  test_mpmc_queue.cpp
tests/filesystem/: CMakeLists.txt  fixture_file_system.hpp  test_file_system.cpp
tests/memory/: CMakeLists.txt  test_generic_utils.cpp
tests/memory/heap/: CMakeLists.txt  basic_allocation.cpp  heap_fixture.hpp  main.cpp
tests/memory/shared_ptr/: CMakeLists.txt  assignment_tests.cpp  basic_tests.cpp  constructor_tests.cpp  destructor_tests.cpp  shared_ptr_fixture.cpp  shared_ptr_fixture.hpp
tests/power_up/: CMakeLists.txt  main.cpp  readme.md
vs/AuroraTests/: AuroraTests.sln  ProjectWideConfiguration.props
vs/AuroraTests/AuroraTests/: AuroraTests.vcxproj
